# rigtop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  main.py  nmead.example.toml  nmead.toml  pyproject.toml  rigtop.example.toml  rigtop.iss  rigtop.spec  rigtop.toml
.claude/agents/: release.md  rigtop-dev.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump.yml  ci.yml  codeql.yml  copilot-review.yml  release.yml
nmead/: app.py  config.py
nmead/sinks/: __init__.py  console.py  tui.py  wsjtx.py
nmead/sources/: __init__.py  gps2ip.py  rigctld.py
rigtop/: __init__.py  __main__.py  app.py  cli.py  config.py  direwolf_launcher.py  discovery.py  geo.py  rigctld_launcher.py  zones.py
rigtop/sinks/: __init__.py  aprsis.py  civ_proxy.py  console.py  direwolf.py  gpsd.py  nmea.py  tui.py  wsjtx.py
rigtop/sources/: __init__.py  direwolf.py  gps2ip.py  rigctld.py
tests/: test_app.py  test_buffers.py  test_config.py  test_direwolf_launcher.py  test_geo.py  test_propagation.py  test_rig_caps.py  test_tui_controls.py
