[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rigtop"
version = "0.3.0"
description = "Ham radio rig dashboard — GPS, frequency, mode, meters via rigctld"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pynmea2>=1.19.0",
    "pyserial>=3.5",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[project.scripts]
rigtop = "rigtop.cli:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # ambiguous unicode chars (intentional en dashes in help text)
    "SIM102",  # nested if → combined if (less readable)
    "SIM105",  # contextlib.suppress (explicit try/except is clearer)
    "SIM108",  # ternary operator (readability preference)
    "SIM114",  # combine if branches (different conditions)
]


