[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rigtop"
version = "0.3.0"
description = "Ham radio rig dashboard — GPS, frequency, mode, meters via rigctld"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pynmea2>=1.19.0",
    "pyserial>=3.5",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "rich>=13.0",
    "textual>=0.80.0",
    "reverse_geocoder>=1.5.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.0",
    "pylint>=3.0",
    "pytest>=8.0",
    "ruff>=0.15.6",
]

[project.scripts]
rigtop = "rigtop.cli:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PTH",  # use pathlib instead of os.path
    "PIE",  # misc cleanup
    "TRY",  # exception handling anti-patterns
    "G",    # logging format strings
    "C4",   # flake8-comprehensions
    "PERF", # performance anti-patterns
]
ignore = [
    "RUF001",  # ambiguous unicode chars (intentional en dashes in help text)
    "SIM102",  # nested if → combined if (less readable)
    "SIM105",  # contextlib.suppress (explicit try/except is clearer)
    "SIM108",  # ternary operator (readability preference)
    "SIM114",  # combine if branches (different conditions)
    "TRY003",  # long exception messages are fine
    "TRY301",  # abstract raise — not always clearer
    "PIE790",  # unnecessary pass (intentional in ABCs)
    "G004",    # f-string in logging — loguru uses f-strings intentionally
]

[tool.commitizen]
version_provider = "pep621"   # reads/writes [project] version in this file
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true     # 0.x.y: feat → minor, fix → patch (no 1.0 surprise)

[tool.pylint.main]
py-version = "3.14"
jobs = 0  # auto-detect CPU count

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "import-outside-toplevel",   # intentional for optional platform imports
    "protected-access",          # internal helpers access _ attrs by convention
    "fixme",                     # TODO/FIXME comments are expected
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-bool-expr = 6
